backend/manifests/application/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-simple-bank-service
spec:
  selector:
    app: simple-bank-api
  ports:
    - name: http
      port: 80
      nodePort: 30001
      protocol: TCP
      targetPort: 30001
    - name: grpc
      port: 443
      nodePort: 30002
      protocol: TCP
      targetPort: 30002
  type: NodePort
