backend/manifests/application/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-bank-svc-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: higress
  rules:
    - host: "svc.api-r.com"
    - http:
        paths:
          - path: /v1/*
            pathType: Prefix
            backend:
              service:
                name: api-simple-bank-service
                port:
                  number: 30002

          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-simple-bank-service
                port:
                  number: 30001

  tls:
    - hosts:
        - svc.api-r.com
      secretName: api-r-com-secret
